--- a/inst/rmarkdown/templates/porous1D_extensive/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/porous1D_extensive/skeleton/skeleton.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "One-dimensional multiphase model"
-subtitle: "template markdown file for 1-D models including porosity"
+title: "One-dimensional reaction-transport multiphase model"
+subtitle: "A template R Markdown file for 1-D reaction-transport models in porous media"
 author: "your name here"
 date: "Date of creation here"
 output:
@@ -16,20 +16,20 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Introduction
 
-This template file contains a simple one-dimensional reaction-transport model in a porous medium. 
+This template contains an R implementation of a simple one-dimensional reaction-transport model in a porous medium. You are free to use and expand it based on your needs.  
 
 The model domain is divided into a grid of $N$ boxes. Rather than having equally-sized boxes, the box size (width of the depth interval) *increases exponentially* with depth. This is because reaction rates are typically highest close to the upper boundary (here: sediment-water interface, SWI), resulting in steep concentration gradients there. In contrast, reaction rates are typically much lower close to the lower boundary (here: deeper in the sediment), resulting in shallower spatial gradients. To achieve good numerical precision at locations where steep gradients might occur, it is therefore a good idea to have smaller box sizes close to the upper boundary, and larger box sizes close to the lower boundary.
 
 Two species (*POC* and *DIC*) are modeled with the following boundary conditions:
 
-* POC: particulate organic carbon, [mol/m3 solid]
+* POC: particulate organic carbon, [mol POC/m3 solid]
   - imposed flux at the upstream boundary (flux.up), 
   - zero-gradient at the downstream boundary,
-* DIC: dissolved inorganic carbon, [mol/m3 liquid] 
+* DIC: dissolved inorganic carbon, [mol DIC/m3 liquid] 
   - imposed concentration at the upstream boundary (C.up), 
   - zero-gradient at the downstream boundary.
 
-The biogeochemical process is the first-order mineralization of POC to DIC.
+The biogeochemical process is the first-order mineralization of POC to DIC, with a stoichiometry of 1:1 (i.e., POC -> DIC).
 
 Units: length in $m$, time in $d$, concentrations in $mol~m^{-3}$, fluxes in $mol~m^{-2}~d^{-1}$. 
 
@@ -37,7 +37,7 @@ Due to sediment compaction, porosity ($[m^3~liquid~m^{-3}~bulk]$) decreases expo
 
 # R implementation
 
-The partial derivatives related to transport are approximated by the function tran.1D from the ReacTran package. The steady-state and dynamic solutions are obtained using functions from the rootSolve and deSolve package. The latter two packages are loaded together with ReacTran. The diffusion coefficients are obtained using the marelac package.
+The partial derivatives related to transport are approximated by the function ``tran.1D()`` from the *ReacTran* package. The steady-state and dynamic solutions are obtained using functions from the *rootSolve* and *deSolve* package, respectively. The latter two packages are loaded together with *ReacTran.* The diffusion coefficients are obtained using the *marelac* package.
 
 ```{r, message = FALSE}
 require(marelac)
@@ -49,34 +49,37 @@ require(ReacTran)
 First, we discretise the spatial domain into a grid, and evaluate on this grid the model parameters that vary with depth in the sediment, including the porosity, solid volume fraction, and the diffusion coefficient. Note that we need to evaluate the diffusion coefficient at the box *interfaces* to be able to later calculate the transport fluxes at the box interfaces!
 
 ```{r}
-# spatial domain: total length of 20 cm, 200 boxes
+# units: time=days, space=meters, amount=moles, concentration=mol/m3
+
+# spatial domain
 Length    <- 0.20   # [m]
-N         <- 200
-# grid with equally sized boxes (not used here)
+N         <- 200    # number of grid cells
+
+# grid with equally sized boxes (not used here, see next R-command)
 Grid      <- setup.grid.1D(L = Length, N = N)
 
-# grid with an exponentially increasing grid size, starting from 0.05 cm (5e-4m)
+# grid with an exponentially increasing grid size, starting from 0.05 cm (5e-4 m)
 Grid      <- setup.grid.1D(L = Length, N = N, dx.1 = 0.05/100)
 
 # function describing the variation of porosity (volume fraction of LIQUID) with depth
 porFun.L  <- function(x, por.SWI, por.deep, porcoef)
   return( por.deep + (por.SWI-por.deep)*exp(-x*porcoef) )
 
-# function describing the SOLID volume fraction (svf = 1-porosity)
+# function describing the SOLID volume fraction (svf = 1 - porosity)
 porFun.S  <- function(x, por.SWI, por.deep, porcoef)
-  return( 1-porFun.L(x, por.SWI, por.deep, porcoef) )
+  return( 1 - porFun.L(x, por.SWI, por.deep, porcoef) )
 
 # calculate porosity and svf on the grid (mid-points and box interfaces, etc.)
 porLiquid <- setup.prop.1D(func=porFun.L, grid=Grid, por.SWI=0.9, por.deep=0.7, porcoef=100)
 porSolid  <- setup.prop.1D(func=porFun.S, grid=Grid, por.SWI=0.9, por.deep=0.7, porcoef=100)
 
-# Sediment diffusion coefficient for HCO3^- (m2/d), defined at box interfaces!! (N+1 values)
-diff.DIC  <- diffcoeff(S=35, t=20)$HCO3 * 3600*24  # m2/s to m2/d
+# Sediment diffusion coefficient for HCO3^-, defined at box interfaces!! (N+1 values)
+diff.DIC  <- diffcoeff(S=35, t=20)$HCO3 * 3600*24  # converted from m2/s to m2/d
 porInt    <- porLiquid$int                         # porosity at the box interfaces            
 diffDIC   <- diff.DIC/(1-log(porInt^2))            # corrected for tortuosity
 ```
 
-Visualise these settings:
+Visualise these settings.
 
 ```{r, fig.width=8, fig.height=2.7}
 par(mfrow = c(1,3))
@@ -94,11 +97,12 @@ Next, we specify the model parameters that do *not* vary with depth in the sedim
 
 ```{r}
 parms <- c(
- Dbio     = 5e-4/365,   # [m2/d]      bioturbation mixing coefficient
- v_adv    = 5e-6,       # [m/d]       sediment advection velocity   
- rMin     = 0.005,      # [/d]        POC mineralisation rate constant
- depoPOC  = 1e-3,       # [mol/m2/d]  POC deposition rate (flux at SWI)
- bwDIC    = 2           # [mol/m3]    DIC concentration at SWI
+ Dbio     = 5e-4/365,   # [m2/d]        bioturbation mixing coefficient
+ v_adv    = 5e-6,       # [m/d]         sediment accretion (=advection) velocity 
+ rMin     = 0.005,      # [/d]          POC mineralisation rate constant
+ depoPOC  = 1e-3,       # [molPOC/m2/d] POC deposition rate (flux at SWI)
+ bwDIC    = 2,          # [molDIC/m3]   DIC concentration at SWI
+ POC2DIC  = 1           # [mol/mol]     Stoichiometry of reaction POC -> DIC
 )
 ```
 
@@ -114,7 +118,7 @@ state    <- c(POC.ini, DIC.ini)
 
 ## Definition of the model function
 
-Next, we define the model function that calculates the *time-derivatives*. In the model function, both POC and DIC are vectors, representing concentrations in the *middle* of the grid boxes (*N* values each). The state variable vector (*state*) is first "split" into these two components, and their transport are estimated using the *tran.1D* function. Note that the concentrations are expressed in *moles per volume fraction*; thus the units depend on whether the state variable is a solute or a solid! Also note the *correction for porosity* when calculating the *reaction rates* for each state variable! The return value from this function contains the vector with the time-derivatives, and ordinary output variables that will be useful later on, packed in a list.
+Next, we define the model function that calculates the *time-derivatives*. In the model function, both POC and DIC are vectors, representing concentrations in the *middle* of the grid boxes (*N* values each). The state variable vector (*state*) is first "split" into these two components, and their transport are estimated using the *tran.1D* function. Note that the concentrations are expressed in *moles per volume fraction*; thus the units depend on whether the state variable is a solute or a solid! Also note the *correction for porosity and stoichiometry* when calculating the *reaction rates* for each state variable! The return value from this function contains the vector with the time-derivatives, and ordinary output variables that will be useful later on, packed in a list.
 
 ```{r}
 Diamodel <- function (t, state, pars)   # state is a LONG vector
@@ -141,59 +145,57 @@ Diamodel <- function (t, state, pars)   # state is a LONG vector
  
     # === reaction rates ===
     # POC mineralisation
-    Mineralisation <- rMin * POC   # [mol/m3 SOLID/d] (per volume of solid!)
+    Mineralisation <- rMin * POC   # [molPOC/m3 SOLID/d] (per volume of solid!)
 
     # more rate expressions can be added here ...
     
     # === mass balances : dC/dt = transport + reactions ===
     
     # solid substances
-    dPOC.dt   <- ( tran.POC$dC                       # transport
-                 - Mineralisation )                  # reactions, [mol/m3 SOLID/d] !!
+    dPOC.dt   <- ( tran.POC$dC                              # transport
+                 - Mineralisation )                         # reactions, [molPOC/m3 SOLID/d] !!
     
     # dissolved substances
     poro      <- porLiquid$mid
-    dDIC.dt   <- ( tran.DIC$dC +                     # transport
-                   Mineralisation * (1-poro)/poro )  # reactions, [mol/m3 LIQUID/d] !!
+    dDIC.dt   <- ( tran.DIC$dC +                            # transport
+                   POC2DIC*Mineralisation * (1-poro)/poro ) # reactions, [molDIC/m3 LIQUID/d] !!
 
-    # depth-integrated rates: [mol/m2 BULK/d] !!
+    # depth-integrated rates: [molPOC/m2 BULK/d] !!
     TotalMin  <- sum(Mineralisation*Grid$dx*porSolid$mid)
   
     return(list(c(dPOC.dt, dDIC.dt),            # the time-derivatives, as a long vector
           Mineralisation = Mineralisation,      # Mineralisation rates, as a vector
              
           # for creating budgets
-          TotalMin      = TotalMin,             # [mol/m2 BULK/d]
-          DIC.SWI.Flux  = tran.DIC$flux.up,     # [mol/m2 BULK/d]
-          DIC.Deep.Flux = tran.DIC$flux.down,   # [mol/m2 BULK/d]
-          POC.SWI.Flux  = tran.POC$flux.up,     # [mol/m2 BULK/d]
-          POC.Deep.Flux = tran.POC$flux.down))  # [mol/m2 BULK/d]
+          TotalMin      = TotalMin,             # [molPOC/m2 BULK/d]
+          DIC.SWI.Flux  = tran.DIC$flux.up,     # [molDIC/m2 BULK/d]
+          DIC.Deep.Flux = tran.DIC$flux.down,   # [molDIC/m2 BULK/d]
+          POC.SWI.Flux  = tran.POC$flux.up,     # [molPOC/m2 BULK/d]
+          POC.Deep.Flux = tran.POC$flux.down))  # [molPOC/m2 BULK/d]
  })
 }
 ```
 
 ## Steady-state solution
 
-Finding a steady-state solution is done with the function *steady.1D* from the package rootSolve.
-This function requires an initial guess of the steady-state solution. 
-A vector of zeros is a good enough first guess. Note that the length of this vector is $2N$, where 2 is the number of state variables.
+Finding a steady-state solution is done with the function *steady.1D* from the package *rootSolve*. This function requires an initial guess of the steady-state solution. A vector of zeros is a good enough first guess. Note that the length of this vector is $2N$, where 2 is the number of state variables.
 
 In this example, three steady-state solutions are calculated, each corresponding to a different organic matter deposition rate.
 
 ```{r}
-p0 <- p1 <- p2 <- parms      # three runs with different deposition rates
+p0 <- p1 <- p2 <- parms      # three runs with different POC deposition rates
 
-p0["depoPOC"]  <- 0          # mol/m2/day
+p0["depoPOC"]  <- 0          # molPOC/m2/day
 std0 <- steady.1D (y=state, func=Diamodel, parms=p0, 
                    nspec=nspec, dimens=N, names=names,
                    positive = TRUE)     # to have only positive values! 
 
-p1["depoPOC"]  <- 1e-3       # mol/m2/day
+p1["depoPOC"]  <- 1e-3       # molPOC/m2/day
 std1 <- steady.1D (y=state, func=Diamodel, parms=p1, 
                    nspec=nspec, dimens=N, names=names,
                    positive = TRUE)     
 
-p2["depoPOC"]  <- 2e-3       # mol/m2/day
+p2["depoPOC"]  <- 2e-3       # molPOC/m2/day
 std2 <- steady.1D (y=state, func=Diamodel, parms=p2, 
                    nspec=nspec, dimens=N, names=names,
                    positive = TRUE) 
@@ -201,25 +203,26 @@ std2 <- steady.1D (y=state, func=Diamodel, parms=p2,
 
 ### Plotting
 
-Here, we visualize the steady state solutions, including the depth profile of the process rate.
+Here, we visualise the steady state solutions, including the depth profile of the process rate.
 
 ```{r, fig.width=8, fig.height=3}
 plot(std0, std1, std2, xyswap=TRUE, grid=Grid$x.mid, lty=1, lwd=2,
-     which = c("POC",            "DIC",             "Mineralisation"  ),
+     which = c("POC",           "DIC",            "Mineralisation"  ),
      xlab  = c("molC/m3 Solid", "molC/m3 Liquid", "molC/m3 Solid/d"), 
      ylab  = "depth (m)", mfrow=c(1,3))
 
-legend("bottomright", legend=c("0", "1e-3", "2e-3"), title="mol/m2/d", 
+legend("bottomright", legend=c("0", "1e-3", "2e-3"), title="depoPOC (mol/m2/d)",
        lwd=2, lty=1, col=1:3)
 ```
 
 ### Budget
 
-First, we check the fluxes at the domain boundaries. We only do this for the steady-state solution std1.
+First, we check the fluxes at the domain boundaries. We only do this for the steady-state solution *std1*.
 Note that although there is no DIC gradient at the lower boundary (default boundary condition, see graphs above), the efflux of DIC in the deep sediment is *not* zero. This efflux is due to *advective* transport, which is equal to $v\cdot C \cdot \phi$ (see lectures), so non-zero whenever the concentration *and* advective velocity are non-zero!
 
 ```{r}
-toselect <- c("TotalMin", "DIC.SWI.Flux", "DIC.Deep.Flux", "POC.SWI.Flux", "POC.Deep.Flux")
+toselect <- c("TotalMin", "DIC.SWI.Flux", "DIC.Deep.Flux", 
+              "POC.SWI.Flux", "POC.Deep.Flux")
 BUDGET   <- std1[toselect]
 unlist(BUDGET)    # show result
 ```
@@ -229,29 +232,30 @@ To verify that our mass balances are correct, we construct the total C budget in
 ```{r}
 # should be the same:
 # net POC rate is negative => POC is net removed within the domain
-c(BUDGET$POC.Deep.Flux - BUDGET$POC.SWI.Flux, -BUDGET$TotalMin)
+c( BUDGET$POC.Deep.Flux - BUDGET$POC.SWI.Flux, 
+  -BUDGET$TotalMin )
 # net DIC rate is positive => DIC is net produced within the domain
-c(BUDGET$DIC.Deep.Flux - BUDGET$DIC.SWI.Flux,  BUDGET$TotalMin)
+c( BUDGET$DIC.Deep.Flux - BUDGET$DIC.SWI.Flux,  
+   BUDGET$TotalMin )
 ```
 
 ## Dynamic solution
 
-The model can be run dynamically with the function *ode.1D* from the package deSolve.
-This requires a good set of initial conditions. 
+The model can be run dynamically with the function *ode.1D* from the package *deSolve*. This requires a good set of initial conditions. 
 
 We use the steady-state solution found above for the POC deposition flux of $1~10^{-3}~mol~m^{-2}~d^{-1}$ (*std1*). We then increase the deposition rate 10-fold and run the model for 2 years.
 
 ```{r}
 times          <- seq(from = 0, to = 2*365, by = 10)
 p2             <- parms
-p2["depoPOC"]  <- parms["depoPOC"]*10         # mol/m2/day
-out            <- ode.1D( y=std1$y, func=Diamodel, parms=p2, times = times,
-                          nspec=nspec, dimens=N, names=names )
+p2["depoPOC"]  <- parms["depoPOC"]*10         # molPOC/m2/day
+out            <- ode.1D(y=std1$y, func=Diamodel, parms=p2, times = times,
+                         nspec=nspec, dimens=N, names=names )
 ```
 
 ### Extracting variables
 
-We can use function *subset* to extract variables from the output. The object will have dimension (length(times), length(x)).
+We can use function *subset* to extract variables from the output. The object will have dimension ``(length(times), length(x))``.
 
 The output times will not be returned by this function, but it is stored in the objects attributes.
 
@@ -261,18 +265,20 @@ dim(POC)
 times <- attributes(POC)$time 
 ```
 
-Based on that, we can plot the times-series of POC at a particular depth, or the profile of POC at a certain time:
+Based on that, we can plot the profile of POC at a certain time or the times-series of POC at a particular depth.
 
 ```{r}
-POC_t <- POC[20,]
-plot(y=Grid$x.mid, x=POC_t, ylim=c(0.10,0), type="l", ylab="depth, m",
-  xlab="mol/m3 solid", main = paste("POC profile at day", times[20]))
+day <- 20
+POC_t <- POC[day,]
+plot(y=Grid$x.mid, x=POC_t, ylim=c(0.10,0), type="l", ylab="depth (m)",
+     xlab="molPOC/m3 solid", main = paste("POC profile at day", times[day]))
 ```
 
 ```{r}
-POC_x <- POC[,20]
-plot(x=times, y=POC_x, type = "l", ylab="mol/m3 solid",
-  main=paste("POC dynamics at ",format(Grid$x.mid[20],digits=2),"m"))
+depth <- 20
+POC_x <- POC[,depth]
+plot(x=times, y=POC_x, type = "l", ylab="molPOC/m3 solid", xlab="time (d)",
+     main=paste("POC dynamics at ",format(Grid$x.mid[20],digits=2),"m"))
 ```
 
 ### Plotting
@@ -289,20 +295,21 @@ Output as lines showing the depth distribution for all time points.
 
 ```{r, fig.width=8, fig.height=4}
 matplot.1D(out, type = "l", grid = Grid$x.mid, 
-      col = grey(seq(0.2,0.8,len=length(times))), # This will use a sequence of greyish colors
+      col = grey(seq(0.2,0.8,len=length(times))), # This will use a sequence of greys
                                                   # grey(1) = white, grey(0) = black
       las = 1, xyswap = TRUE, lty = 1, ylab="depth (m)",
-      xlab = c("mol/m3 SOLID", "mol/m3 LIQUID"))
+      xlab = c("molPOC/m3 SOLID", "molDIC/m3 LIQUID"))
 ```
 
 
-### simple plots
+### Simple plots
 
 We also plot the fluxes at the SWI and in the deep sediment as a function of time. The POC flux at the SWI should be constant, as specified by the boundary condition at the SWI.
 
 ```{r, fig.width=10, fig.height=3}
-plot(out, which = c("DIC.SWI.Flux", "DIC.Deep.Flux", "POC.SWI.Flux", "POC.Deep.Flux"), 
-     mfrow=c(1,4), xlab="time (d)", ylab="mol/m2/d")
+plot(out, which = c("DIC.SWI.Flux", "DIC.Deep.Flux", 
+                    "POC.SWI.Flux", "POC.Deep.Flux"), 
+     mfrow=c(1,4), xlab="time (d)", ylab="molC/m2/d")
 ```
 
 The miniscule but detectable increase in the POC flux at the lower boundary shows that for the given POC input at the SWI, not all POC is converted into DIC within the sediment column of 20 cm! The rest is self-explanatory.
